--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "godaddy-cloud-api-wrapper",
+  "name": "gd-api-wrapper",
   "version": "1.0.0",
   "description": "Wrapper for Godaddy.com's Cloud Server API.",
   "main": "index.js",
