--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "type": "git",
     "url": "https://github.com/briboles/gd-api-wrapper.git"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "mocha": "^2.2.5"
+  }
 }
